tests/ui/missing_semicolon.stderr
error: expected `;` or `,`
 --> tests/ui/missing_semicolon.rs:5:9
  |
5 |         AndMore = ::std::hash::Hash, ..Ord, ::core::clone::Clone, ::core::marker::Copy, ::core::default::Default;
  |         ^^^^^^^

error[E0432]: unresolved import `crate`
 --> tests/ui/missing_semicolon.rs:2:5
  |
2 | /     derive_aliases::define! {
3 | |         Eq = ::core::cmp::Eq, ::core::cmp::PartialEq
4 | |         //                                          ^ missing `;`
5 | |         AndMore = ::std::hash::Hash, ..Ord, ::core::clone::Clone, ::core::marker::Copy, ::core::default::Default;
6 | |     }
  | |_____^ no `Eq` in `derive_alias`
  |
  = note: this error originates in the macro `derive_aliases::define` (in Nightly builds, run with -Z macro-backtrace for more info)
help: consider importing this trait instead
  |
2 -     derive_aliases::define! {
3 -         Eq = ::core::cmp::Eq, ::core::cmp::PartialEq
4 -         //                                          ^ missing `;`
5 -         AndMore = ::std::hash::Hash, ..Ord, ::core::clone::Clone, ::core::marker::Copy, ::core::default::Default;
6 -     }
2 +     std::cmp::Eq as _
  |

error[E0433]: failed to resolve: could not find `Ord` in `derive_alias`
 --> tests/ui/missing_semicolon.rs:5:40
  |
5 |         AndMore = ::std::hash::Hash, ..Ord, ::core::clone::Clone, ::core::marker::Copy, ::core::default::Default;
  |                                        ^^^ could not find `Ord` in `derive_alias`
